# ChangeLog for dev-db/mysql
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.485 2009/03/01 10:50:36 armin76 Exp $

  01 Mar 2009; Raúl Porcel <armin76@gentoo.org> mysql-5.0.70-r1.ebuild:
  s390/sh stable wrt #246652

  28 Feb 2009; Robin H. Johnson <robbat2@gentoo.org> mysql-4.1.22-r1.ebuild,
  mysql-4.1.23_alpha20070101-r61.ebuild:
  Bug #259977: apply the automake patch so that older 4.1 still compiles.

*mysql-5.0.76 (11 Feb 2009)

  11 Feb 2009; Robin H. Johnson <robbat2@gentoo.org> +mysql-5.0.76.ebuild:
  Version bump. Includes new patches for bad whitespace in the HTML encoding
  testcase, plus SIGBUS fixes for sparc. -r1 will contain the Percona
  patchset.

  14 Dec 2008; Tobias Klausmann <klausman@gentoo.org>
  mysql-4.0.27-r1.ebuild, mysql-4.1.22-r1.ebuild,
  mysql-4.1.23_alpha20070101-r61.ebuild:
  Mysql 4 doesn't compile cleanly on alpha (bug 162062) and nothing depends
  on it specifically, so dropping the keyword altogether

  03 Dec 2008; Brent Baude <ranger@gentoo.org> mysql-5.0.70-r1.ebuild,
  mysql-5.0.72-r1.ebuild:
  Marking mysql-5.0.70-r1 ppc64 and mysql-5.0.72-r1 ~ppc64

  03 Dec 2008; Jeroen Roovers <jer@gentoo.org> mysql-5.0.70-r1.ebuild:
  Stable for HPPA (bug #246652).

  01 Dec 2008; Brent Baude <ranger@gentoo.org> mysql-5.0.72-r1.ebuild:
  Marking mysql-5.0.72-r1 ppc64 for bug 246652

  01 Dec 2008; Raúl Porcel <armin76@gentoo.org> mysql-5.0.70-r1.ebuild:
  alpha/arm/ia64/sparc stable wrt #246652

  30 Nov 2008; Markus Meier <maekke@gentoo.org> mysql-5.0.70-r1.ebuild:
  amd64/x86 stable, bug #246652

  29 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  mysql-5.0.70-r1.ebuild:
  ppc stable, bug #246652

*mysql-5.0.72-r1 (29 Nov 2008)
*mysql-5.0.70-r1 (29 Nov 2008)

  29 Nov 2008; Robin H. Johnson <robbat2@gentoo.org>
  +mysql-5.0.70-r1.ebuild, +mysql-5.0.72-r1.ebuild:
  Bump to add security fixes for bug #240407 (MySQL #27884), #229329 (MySQL