@@ -8,10 +8,12 @@ DIST mysql-5.0.76.tar.gz 34414933 RMD160 acf98699c8d2c67f649d92b579907e8a4155aa9
 DIST mysql-extras-20080601.tar.bz2 106566 RMD160 6e6470c8908e0e944ff8a71886db6e80af9465b0 SHA1 a462cf953452283bafd785ac9c109104b673bbd1 SHA256 de7bb63eb6de3b7b14d8d65b5248258b18e00524eac08dddf373f98361402ed9
 DIST mysql-extras-20081129-1041Z.tar.bz2 110743 RMD160 e159b801785109860325e44fc76b96fc940f012f SHA1 38db6b3328cf6523e076f23d9cf43ae76c74678a SHA256 4975eec32d2359924fd7e40b44d8764b6511ca6a62f71611a991427409ef5202
 DIST mysql-extras-20090211-1206Z.tar.bz2 111217 RMD160 243e1ace611f07f30c148c272d064fc916a47821 SHA1 2ba4041b6749575380fda0e6ae551284aaefcbfc SHA256 9a9a40aac283059492b10ff3dc059a90990dc3b7963405054ead1c750d63d081
+DIST mysql-extras-20090412-0009Z.tar.bz2 256637 RMD160 da0e1bbc6db770171e34c2f58e35f5417ed22f0a SHA1 61c2a15ac6cb34ec2c4b83ac314f6c5d1d3b2ab3 SHA256 9a615dceed183648b1ee83dafbdadfd735a8db312032a871934b63dd847adc42
 EBUILD mysql-5.0.60-r1.ebuild 3419 RMD160 3536d5be86d8c9a108a6acaac2b4f82b74dc03c9 SHA1 74ca465acfd85e95ee4a48a283a899b369aa1dfb SHA256 a0b083bb9bb9e93aee0b33adaa79d3226efcb997dd2b69063e78f0613c575059
 EBUILD mysql-5.0.70-r1.ebuild 4047 RMD160 87e4d43aab458f5049877d7b76bb5d19e6645c71 SHA1 9c6f88958afa16aa431ef25d3d4518a92b21d2eb SHA256 a258beb0acdf1b978602ad4a273a7adf34bf8c18cf5c2b54895585e7f4f2993a
 EBUILD mysql-5.0.70.ebuild 4039 RMD160 c976851d715705d60eb21fe408f7a4b09ff0c29f SHA1 c317f5587d7c55157f55c0b73060bfbedd8965e5 SHA256 065658f4fb9858fc27011fffbce57b3b37e2703f4d7b2db4a812b5d3635c3ff0
 EBUILD mysql-5.0.72-r1.ebuild 4302 RMD160 02f282a93d5476b0637ce11e03a1236cafd3f5f6 SHA1 ecc2726c7a70eeadb2c30ceb899ab3928d348ba6 SHA256 936b9a69e16c9585c79b1b49e77959d30994fa5db979520f698a36681272f328
+EBUILD mysql-5.0.76-r1.ebuild 4852 RMD160 8db9a9ad8bb9673a1e837e6c0149aa0bff4a7939 SHA1 fcb082179cf321969a30e4a832a31f8fbc114f00 SHA256 baf0e4d359a81f034fb5171a028d3ac1bed758f22825deac578f575bb999716f
 EBUILD mysql-5.0.76.ebuild 4851 RMD160 0e42219acdbb873af369772e7dc2dca2d1eb9a43 SHA1 88373343f6fe3137086915c29c7f3193e5e0c05e SHA256 c7df0978bb12119a2b4688287299aaa2bffdbafb5489545991db97d02768e541
-MISC ChangeLog 92900 RMD160 351db75af5566a90ea2893caf2b4e9146d554fe3 SHA1 08447ad9d7f06501c538ac24ccce68fc89ed0c6d SHA256 b6024ee9fd05ed23e12a41e7ff9c46963777a02c267ca572753a03db4a1c0a49
+MISC ChangeLog 93265 RMD160 e6f8fa63fc0ad07afbaf976ab32317f69daa1294 SHA1 3d2cd5a49e852add7fd2d501c7c25fa3d8361559 SHA256 4aa9cc8b185861bc037fc40941f3977d6202dc15ca268478b606df6bdf0f3d2d
 MISC metadata.xml 746 RMD160 24dadde02462666d5b05608b73a87094de82af1a SHA1 596f0628975fc92ff1cb4d665f7fa5d7eac04505 SHA256 070b3c63ddedff2023166fd0f82bd9dc6a691079c10a6ee968ca7b28e97af5a6
