@@ -1,6 +1,17 @@
 # ChangeLog for dev-db/mysql
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.485 2009/03/01 10:50:36 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.487 2009/04/14 03:36:41 darkside Exp $
+
+  14 Apr 2009; Jeremy Olexa <darkside@gentoo.org>
+  -mysql-4.1.23_alpha20070101-r61.ebuild:
+  remove p.masked version after talking to robbat2 in irc
+
+*mysql-5.0.76-r1 (12 Apr 2009)
+
+  12 Apr 2009; Robin H. Johnson <robbat2@gentoo.org>
+  +mysql-5.0.76-r1.ebuild:
+  Bug #238487, lots of patching fun to enable building of a shared embedded
+  libmysqld for Amarok.
 
   01 Mar 2009; Raúl Porcel <armin76@gentoo.org> mysql-5.0.70-r1.ebuild:
   s390/sh stable wrt #246652
